Carme-Frontend/Carme-Django/static/css/style.css
@value --carme-* from "./theme.css";

/*--------------------------------------------------*/
/*            Font Size - Font Weight               */
/*--------------------------------------------------*/

/* font-size */
.fs--5{
  font-size: .475rem!important;
}
.fs--4{
  font-size: .575rem!important;
}
.fs--3{
  font-size: .675rem!important;
}
.fs--2{
  font-size: .775rem!important;
}
.fs--1{
  font-size: .875rem!important;
}
.fs--0{
  font-size: .975rem!important;
}
.fs-0{
  font-size: 1.0rem!important;
}
.fs-1{
  font-size: 1.025rem!important;
}
.fs-2{
  font-size: 1.125rem!important;
}
.fs-3{
  font-size: 1.225rem!important;
}
.fs-4{
  font-size: 1.325rem!important;
}
.fs-5{
  font-size: 1.425rem!important;
}
.fs-6{
  font-size: 1.525rem!important;
}
.fs-7{
  font-size: 1.625rem!important;
}
.fs-8{
  font-size: 1.725rem!important;
}
.fs-9{
  font-size: 1.825rem!important;
}
.fs-10{
  font-size: 1.925rem!important;
}

/* font-weight */
.fw-100 {
  font-weight:100!important;
}
.fw-200 {
  font-weight:200!important;
}
.fw-300 {
  font-weight:300!important;
}
.fw-400 {
  font-weight:400!important; /*= fw-normal*/
}
.fw-500 {
  font-weight:500!important;
}
.fw-600 {
  font-weight:600!important;
}
.fw-700 {
  font-weight:700!important; /*= fw-bold*/
}
.fw-800 {
  font-weight:800!important;
}
.fw-900 {
  font-weight:900!important;
}
.fw-1000 {
  font-weight:1000!important;
}

/*--------------------------------------------------*/
/*                     General                      */
/*--------------------------------------------------*/

body {
  background-color: var(--carme-body-bg)!important;
}
.text-title {
  color: var(--carme-title-text)!important;
}
.text-brand {
  color: var(--carme-brand-text)!important;
}
.text-header {
  color: var(--carme-card-head-text)!important;
}
.text-body {
  color: var(--carme-card-body-text)!important;
}
.text-justify {
  text-align: justify;
}


/*-----------------  Card & Modal  -----------------*/

/* card & modal */
.card, .modal-content {
  background-color: var(--carme-card-bg);
  border: 1px solid var(--carme-card-border);
  box-shadow: var(--carme-card-shadow)!important; 
  -webkit-box-shadow: var(--carme-card-shadow)!important;
  border-radius: 10px;
  overflow:hidden;  
  text-align: Left;
}
.card-header, .modal-header {
  background-color: var(--carme-card-header-bg);
  border-bottom: 1px solid var(--carme-card-header-border);
  box-shadow: var(--carme-card-header-shadow)!important; 
  -webkit-box-shadow: var(--carme-card-header-shadow)!important;
}
.card-footer, .modal-footer {
  background-color: var(--carme-card-footer-bg);
  border-top: 1px solid var(--carme-card-footer-border);
  box-shadow: var(--carme-card-footer-shadow)!important; 
  -webkit-box-shadow: var(--carme-card-footer-shadow)!important;
}

/* modal-close-button */
.btn-close {
  background: var(--carme-modal-btn-close-bg);
  border: 1px solid var(--carme-modal-btn-close-border);
  box-shadow: var(--carme-modal-btn-close-shadow)!important; 
  -webkit-box-shadow: var(--carme-modal-btn-close-shadow)!important;
  opacity: 1;
}
.btn-close:active,
.btn-close:focus {
  box-shadow: var(--carme-modal-btn-close-shadow)!important; 
  -webkit-box-shadow: var(--carme-modal-btn-close-shadow)!important;
  opacity: 0.5; 
}

/* body-scrollbar not hidden when modal is active*/
.modal-open {
  overflow:hidden!important; 
  overflow-y:scroll!important;
  /* padding-right:0 !important; */
}

/*---------------------  Table  ----------------------*/
table tr{
  background:   var(--carme-table-bg); 
  border: 0px solid var(--carme-table-border)!important;
  box-shadow: var(--carme-table-shadow); 
  -webkit-box-shadow: var(--carme-table-shadow);
}
thead{
  background: var(--carme-table-head-bg); 
  border-bottom: 2px solid var(--carme-table-head-border);
  box-shadow: var(--carme-table-head-shadow); 
  -webkit-box-shadow: var(--carme-table-head-shadow);
}
.table>:not(:first-child) {
  border-top: none; 
}


/*-------------------  Form-Select  ------------------*/
.form-select, 
.form-select:focus  {
  padding: .3125rem 2rem .3125rem 0.6rem;
  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='%234d5969' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M2 5l6 6 6-6'/%3e%3c/svg%3e");
  background-repeat: no-repeat, repeat;
  background-position: right 0.6rem center;
  background-size: 16px 12px;
  border-radius: .25rem;
  -moz-appearance: none;
  -webkit-appearance: none;
  appearance: none;
  border: 1px solid var(--carme-form-border);
  background-color: var(--carme-form-bg)!important;
  box-shadow: var(--carme-form-shadow)!important;
  outline:none;
}
.form-select:hover, 
.form-select:active {
  border-color: var(--carme-form-border-hover);
  outline: 0;
} 

/*--------------------------------------------------*/
/*                     Login                        */
/*--------------------------------------------------*/

/* input-text */
.form-group input,
.form-group input:valid,
.form-group input:focus  {
  color: var(--carme-input-text);
  height: 3.125rem; 
}

/* input-label */
.form-group label {
  color: var(--carme-input-label-lg-text);
  font-size: 16px;
  font-weight: 300;
  transform: translateY(8px);
  transition: all 0.2s ease-in-out;
  position: absolute;
  pointer-events: none;
  top: 0; 
  height: 3.125rem;
}
.form-group input:valid + label,
.form-group input:focus + label,
.form-group input:-webkit-autofill + label {
  color: var(--carme-input-label-sm-text);
  font-size: 12px;
  font-weight: 300;
  transform: translateY(0);
}

/* chrome-autofill */
input:-webkit-autofill,
input:-webkit-autofill:hover,
input:-webkit-autofill:focus,
input:-webkit-autofill:active {
  transition: background-color 5000s ease-in-out 0s;
  -webkit-text-fill-color: var(--carme-input-text);
  -webkit-box-shadow: inset 0 0 0 30px var(--carme-input-bg)!important;
}
/* ... */

